# O2O

./: .getignore  .gitignore  LICENSE  MANIFEST.in  README.md  demo.ipynb  demo.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
o2o/: .analyzer.py.swp  __init__.py  analyzer.py  demo.py  estimator.py  hawkes_model  hawkes_model.stan  simulator.py
tests/: test_analyzer.py  test_estimator.py  test_simulator.py
