[metadata]
name = O2O
version = 0.1.0
author = Youness Diouane
author_email = taykileo@gmail.com
description = Tools for simulating and analyzing the spillover between online and offline activities
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
 packages = find:
 install_requires =
     numpy
     pandas
     matplotlib
-    pystan    # or cmdstanpy
+    pystan>=3.0
+    nest_asyncio
 python_requires >=3.7

[options.package_data]
o2o = *.pdf

[tool:pytest]
testpaths = tests

