[metadata]
name = o2o-process
version = 1.5.8
author = Youness Diouane
author_email = taykileo@gmail.com
description = Tools for simulating and analyzing the spillover between online and offline activities
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
    pystan
    nest_asyncio
python_requires = >=3.7

[options.package_data]
o2o = 
    *.pdf
    *.stan

[tool:pytest]
testpaths = tests

[options.entry_points]
console_scripts =
    o2o-demo = o2o.demo:main

